update labeling codes

--- a/3D/label_generation.ipynb
+++ b/3D/label_generation.ipynb
@@ -30,14 +30,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../label_information.txt'\n",
+    "fn = '../define_path.txt'\n",
     "with open(fn) as f:\n",
     "    lines = f.readlines()\n",
     "for idx, line in enumerate(lines):\n",
     "    if idx == 1:\n",
-    "        dir_co2 = line.split('=')[1][1:-2]\n",
+    "        dir_co2 = line.split('=')[1][:-1]\n",
     "    if idx == 3:\n",
-    "        dir_grid = line.split('=')[1][1:-1]"
+    "        dir_grid = line.split('=')[1][:-1]"
    ]
   },
   {
